fixed up the hover state for the TOC to give the current .active class a hover removing some margins and paddings to compress the settings menus added vertical alignment to get the big A little A buttons to layout better

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -219,6 +219,10 @@ ul li {
   }
 // /controls-view
 
+@warn  "Move TOC section to a partial";
+//////////////////////////////
+// Table of Contents Sytles //
+//////////////////////////////
 .contents-view {
   background-color: $nypl-white;
   border-bottom: 0.125rem solid $nypl-blue;
@@ -242,6 +246,16 @@ ul li {
       &:hover {
         color: $nypl-white;
       }
+
+      &.active {
+        background: lighten($nypl-blue, 30%);
+        color: $nypl-black;
+      }
+
+      &.active:hover {
+        background: $nypl-black;
+        color: lighten($nypl-blue, 30%);
+      }
     }
   }
 }
@@ -251,7 +265,7 @@ ul li {
 .settings-view {
 
   > .settings-menu {
-    background-color: transparentize($nypl-white, 0.15);
+    background-color: transparentize($nypl-lighter-gray, 0.05);
     border-bottom: 1px solid $nypl-blue-dark;
     border-top: 1px solid $nypl-blue-dark;
     left: 0;
@@ -266,11 +280,11 @@ ul li {
     }
 
     .enable-offline {
-      margin-top: 0.35rem;
+      //margin-top: 0.35rem;
 
-      @media (min-width: 60rem) {
-        width: 52%;
-      }
+      // @media (min-width: 60rem) {
+      //   width: 52%;
+      // }
     }
 
     button {
@@ -300,16 +314,18 @@ ul li {
       display: inline-block;
       margin: 0.5rem 0;
       padding: 0;
+      vertical-align: text-bottom;
       width: auto;
 
       @media (min-width: 60rem) {
         display: inline-block;
-        width: 33%;
+        margin-right: 1%;
+        //width: 33%;
       }
     }
 
     > li:nth-child(3) {
-      margin: 0 0 1.25rem;
+      //margin: 0 0 1.25rem;
     }
 
     .settings-options {
@@ -323,23 +339,23 @@ ul li {
         border: 0;
         display: inline-block;
         margin: 0;
-        padding: 0 0 0.25rem;
+        //padding: 0 0 0.25rem;
         width: auto;
       }
 
       .font-setting {
-        padding: 0 0.3rem 0 0;
+        //padding: 0 0.3rem 0 0;
         vertical-align: text-bottom;
       }
 
       .increase {
         font-size: 1.3rem;
-        padding: 0 0.69rem;
+        padding: 0.2rem 0.69rem;
       }
 
       .decrease {
         font-size: 0.8rem;
-        padding: 0.25rem 0.75rem;
+        padding: 0.475rem 0.75rem;
       }
     }
   }
